# espidfMetheo

./: .gitignore  CMakeLists.txt  README.md  listen_mqttudp.py  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  mqttudp_client.c  mqttudp_client.h  sensor.c  sensor.h  wifi.c  wifi.h
